# aibenchmark

./: CMakeLists.txt  README.md
core/: benchmark.cpp
core/engine/: Engine.h  EngineFactory.h
core/mindspore/: MindSporeEngine.cpp  MindSporeEngine.h
core/mnn/: MnnEngine.cpp  MnnEngine.h
core/tflite/: TfliteEngine.cpp  TfliteEngine.h
core/utils/: TimeUtil.h
script/: benchmark.py  build.bat  build.sh  modelInfo.json
